fix(ModalOverlay): use fixed position for ModalRoot; add z-index

--- a/packages/vkui/src/components/ModalOverlay/ModalOverlay.module.css
+++ b/packages/vkui/src/components/ModalOverlay/ModalOverlay.module.css
@@ -18,6 +18,7 @@
 
 .hostPositionFixed {
   position: fixed;
+  z-index: var(--vkui--z_index_modal);
 }
 
 .hostStateEnter {
